tests/data/acme-pebble/htpasswd-secret.yaml
# Test-only credentials: user "foo", password "bar".
apiVersion: v1
kind: Secret
metadata:
  name: acme-htpasswd
stringData:
  htpasswd: |
    foo:$2a$10$7QsJMhRrdZzGnQ3DbrfrM.gHMm3BFBHUpQFDSOZLU08fkXSjjSCjq
type: nginx.org/htpasswd
